sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: type mismatch;
 found   : Unit
 required: Boolean
	do {	if (i=0) {
                     ^AlgGnomeSort:14: error: value =! is not a member of Int
	} while (i=!getNombreValeurs()-1)
                  ^